<resources>
    <string name="app_name">GoalPlanner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- sign up -->
    <string name="sign_up_txt_header">Create your account</string>
    <string name="sign_up_edit_username">username</string>
    <string name="sign_up_edit_email">Email@naver.com</string>
    <string name="sign_up_edit_pass">password</string>
    <string name="sign_up_edit_pass_vertify">password</string>
    <string name="sign_up_button_ok">ok</string>

    <!--- sign up edit err -->
    <string name="sign_up_edit_username_length_err">length</string>
    <string name="sign_up_edit_username_dublicate_err">doublicated</string>
    <string name="sign_up_edit_email_dublicate_err">doublicated</string>
    <string name="sign_up_edit_email_empty_err">empty</string>
    <string name="sign_up_edit_not_email_err">not email format</string>
    <string name="sign_up_edit_email_not_exist_err">email not exist</string>
    <string name="sign_up_edit_pass_length_err">length</string>
    <string name="sign_up_edit_pass_not_vertify_err">check your pass</string>
    <string name="sign_up_fail">failed</string>

    <!-- sign up etc -->
    <string name="sign_up_progress">wait a moment</string>

    <!-- sign in -->
    <string name="sign_in_txt_header">Sign in</string>
    <string name="sign_in_edit_username">username</string>
    <string name="sign_in_edit_email">Email</string>
    <string name="sign_in_edit_pass">password</string>
    <string name="sign_in_button_ok">OK</string>

    <!--- sign in edit err -->
    <string name="sign_in_edit_username_length_err">length</string>
    <string name="sign_in_edit_email_empty_err">empty</string>
    <string name="sign_in_edit_not_email_err">it\'s wrong email</string>
    <string name="sign_in_edit_pass_length_err">between 4 and 12 alphanumeric characters</string>
    <string name="sign_in_fail">failed! check your email and password</string>

    <!--- sign in edit err -->
    <string name="sign_in_to_sign_up">you don\'t have account?</string>
    <string name="sign_in_find_account">you forget your password?</string>

    <!-- sign up etc -->
    <string name="sign_in_progress">wait a moment</string>

    <!-- network err -->
    <string name="network_not_connected">network not connected</string>

    <!-- findpass-->
    <string name="findpass_txt_header">Recovery your account</string>
    <string name="findpass_edit_email">email</string>
    <string name="findpass_submit">OK</string>

    <!-- findpass err-->
    <string name="findpass_edit_email_empty_err">empty</string>
    <string name="findpass_in_edit_not_email_err">not match</string>
    <string name="title_activity_start">StartActivity</string>

    <!-- main -->
    <string name="main_txt_no_network">Network is not available</string>
    <string name="main_txt_bad_server">Server is something wrong</string>
    <string name="main_txt_retry">Retry</string>

    <!-- main signout -->
    <string name="main_logout_is_netcache"> available not finished task. you want to finished?</string>
    <string name="main_logout_not_available_network">not available network. turn on the network</string>
    <string name="main_logout_is_netcache_positive_button">yes</string>
    <string name="main_logout_is_netcache_nagative_button">no</string>
    <string name="main_logout_netcache_progress">wait a moment</string>
    <string name="main_logout_netcache_failed">failed task!! Try again signout! please!</string>

    <!-- goalcreatefragment-->
    <string name="goalcreate_txt_start">what is your goal?</string>
    <string name="goalcreate_edit_goal_name">goal name</string>
    <string name="goalcreate_edit_end_date">08/01/2000</string>
    <string name="goalcreate_txt_reason">why do you want to become true your goal?</string>
    <string name="goalcreate_txt_end_date">when would you do finish?</string>
    <string name="goalcreate_btn_submit">ok</string>
    <string name="goalcreate_err_edit_empty_goalname">enter goal name</string>
    <string name="goalcreate_err_edit_empty_reason">enter the reason </string>
    <string name="goalcreate_err_edit_empty_enddate">enter the enddate</string>
    <string name="goalcreate_err_edit_goal_duplication">goal is duplicate</string>

    <!-- goalListFragment -->
    <string name="goallist_txt_nothing_goallist">There is no goal List \n you need to add goal</string>
    <string name="goallist_rv_txt_totaltime_stringformat">%d.%02d hours </string>
    <string name="goallist_alert_not_select_goal_during_play">you can\'t select goal during playing</string>
    <string name="goallist_builder_delete_goal">Delete Goal</string>
    <string name="goallist_builder_modify_goal">Modify Goal</string>
    <string name="goalList_txt_failed_delete_goal">failed DeleteGoal</string>

    <string name="goallist_delete_confirm_message">are you sure for delete?</string>
    <string name="goallist_delete_confirm_ok">Ok</string>
    <string name="goallist_delete_confirm_cancel">Cancel</string>

    <!-- navigataion Menu -->
    <string name="navigataion_menu_setting">setting</string>
    <string name="navigataion_menu_analystic">analystic</string>
    <string name="navigataion_menu_logout">logout</string>
    <string name="title_activity_navigation_base">NavigationBaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_welcome">Welcome\t</string>


    <!-- goalitem -->
    <string name="goalitem_goal_name">name:</string>
    <string name="goalitem_goal_totaltime">totaltime:</string>
    <string name="goalitem_goal_startdate">start date:</string>
    <string name="goalitem_goal_enddate">end date:</string>

    <!-- stopwatch fragment-->
    <string name="stopwatch_txt_time">00:00:00</string>
    <string name="stopwatch_txt_from"> ~</string>
    <string name="stopwatch_alert_selectvoca_first">you hava to select vocal first</string>

    <!-- stopwatch service -->
    <string name="stopwatch_toast_txt_sucess_creategoal"> sucess create task</string>
    <string name="stopwatch_toast_txt_failed_creategoal">failed create taske \n it will be saved cache</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- widget -->
    <string name="widget_toast_not_authenficated">you must sign in fisrt</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
