<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nss.goalplanner.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_txt_header"
            android:textStyle="italic|bold"
            android:textSize="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_username"
        android:hint="@string/sign_up_edit_username"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:hint="@string/sign_up_edit_email"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_pass"
        android:hint="@string/sign_up_edit_pass"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_vertify_pass"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/sign_up_edit_pass_vertify"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:text="@string/sign_up_button_ok"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</FrameLayout>
