<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nss.goalplanner.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/sign_in_txt_header"
            android:textSize="20dp"
            android:textStyle="italic|bold"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_email"
            android:hint="@string/sign_in_edit_email"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:singleLine="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_pass"
            android:hint="@string/sign_in_edit_pass"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:text="@string/sign_in_button_ok"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_signup"
            android:text="@string/sign_in_to_sign_up"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_find_account"
            android:text="@string/sign_in_find_account"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"

            />
    </LinearLayout>

</FrameLayout>
