<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout_ok"
            android:theme="@style/AppTheme.AppBarOverlay"
            >
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/listFragment"
                android:layout_weight="1"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stopwatchfragment"
                 />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_bad_server"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/img_bad_server"
                android:src="@drawable/server_dead"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_bad_server"
                android:text="@string/main_txt_bad_server"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/txt_bad_server"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_txt_retry"
                android:textSize="25dp"
                android:id="@+id/txt_bad_server_retry"
                android:layout_below="@+id/txt_bad_server"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_no_network"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/img_no_network"
                android:src="@drawable/network_not_connected"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_no_network"
                android:text="@string/main_txt_no_network"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/txt_no_network"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_txt_retry"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:layout_below="@+id/txt_no_network"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:id="@+id/txt_no_network_retry"
                />

        </RelativeLayout>


        <android.support.design.widget.NavigationView
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|start"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:id="@+id/navigation_drawer"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/activity_navigation_base_drawer"
            />
    </android.support.v4.widget.DrawerLayout>

